--- a/Examen01-KV/app/build.gradle
+++ b/Examen01-KV/app/build.gradle
@@ -1,16 +1,18 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.firebase.appdistribution'
+    id 'com.google.gms.google-services'
 }
 
 android {
     namespace 'com.example.examen01_kv'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.examen01_kv"
         minSdk 24
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
