--- a/Examen01-KV/app/src/main/AndroidManifest.xml
+++ b/Examen01-KV/app/src/main/AndroidManifest.xml
@@ -11,7 +11,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Examen01KV"
-        tools:targetApi="31">
+        tools:targetApi="33">
+        <activity
+            android:name=".CrearFloreria"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Flor"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".Floreria"
             android:exported="false">
