--- a/Examen01/app/src/main/AndroidManifest.xml
+++ b/Examen01/app/src/main/AndroidManifest.xml
@@ -13,6 +13,20 @@
         android:theme="@style/Theme.Examen01"
         tools:targetApi="31">
         <activity
+            android:name=".CrearFlor"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".ListaFlores"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".ActualizarFloreria"
             android:exported="false">
             <meta-data
