--- a/01-android/build.gradle
+++ b/01-android/build.gradle
@@ -11,3 +11,7 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin' version '2.0.1' apply false
 }
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
