--- a/01-android/app/src/main/AndroidManifest.xml
+++ b/01-android/app/src/main/AndroidManifest.xml
@@ -16,6 +16,13 @@
         android:theme="@style/Theme.MovilesComp2023A"
         tools:targetApi="31">
         <activity
+            android:name=".HFirebaseUIAuth"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".GGoogleMapsActivity"
             android:exported="false">
             <meta-data
