--- a/Examen02/app/src/main/AndroidManifest.xml
+++ b/Examen02/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.Examen02"
         tools:targetApi="31">
         <activity
+            android:name=".ActualizarFloreria"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".CrearFloreria"
             android:exported="false">
             <meta-data
