--- a/Examen02/app/src/main/AndroidManifest.xml
+++ b/Examen02/app/src/main/AndroidManifest.xml
@@ -13,6 +13,20 @@
         android:theme="@style/Theme.Examen02"
         tools:targetApi="31">
         <activity
+            android:name=".CrearFlor"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".ListaFlores"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".ActualizarFloreria"
             android:exported="false">
             <meta-data
@@ -33,13 +47,7 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <activity
-            android:name=".Firestore"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
